[package]
name = "chronos-log"
version = "0.1.0"
edition = "2021"
description = "A work activity time tracker with SQLite backend"
authors = ["Your Name"]

[dependencies]
# GUI framework - works on Linux and Windows
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["datepicker"] }

# SQLite database
rusqlite = { version = "0.32", features = ["bundled"] }

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Serialization (for potential future use)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Cross-platform directories
dirs = "5.0"

# Logging (optional, for development)
env_logger = "0.11"
log = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
